# MTPHandler

./: .gitignore  404.html  LICENSE  README.md  SLAC_kinetic_assay.json  assignment.xlsx  book.ipynb  enz.json  enzymemldoc.json  index.html  kinetics_substrate.json  mkdocs.yml  objects.inv  plate_to_enzymeml.ipynb  plate_visualization.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  sitemap.xml  test.ipynb  test.py  test_datamodel.ipynb  test_to_enzymeml.ipynb  test_to_standard.ipynb
.github/workflows/: coverage.yml  generate_api.yml  mkdocs.yml  publish_pypi.yaml  tests.yml  update_api.yaml
MTPHandler/: __init__.py  dataclasses.py  model.py  molecule.py  plate_manager.py  tools.py  visualize.py
MTPHandler/core/: __init__.py  abstractspecies.py  blankstate.py  initcondition.py  photometricmeasurement.py  plate.py  protein.py  reactant.py  species.py  speciescondition.py  vessel.py  well.py
MTPHandler/examples/: __init__.py  example_spectramax.ipynb  exaple.ipynb  kinetics_substrate.json  lac_kinetics.json  megellan_example.ipynb  megellan_parser.py  plate_raw_data.txt  spectramax_parser.py
MTPHandler/ioutils/: __init__.py  calipytion.py  createenzymeml.py  enzymeml.py  pyenzyme.py  spectramax_parser.py  standardmapper.py
MTPHandler/modified/: __init__.py  abstractspecies.py  plate.py  protein.py  reactant.py  well.py
MTPHandler/parseres/: megellan_parser.py  multiskan_parser.py
MTPHandler/readers/: __init__.py  abstractreader.py  biotek.py  factory.py  magellan_parser.py  megellan_parser.py  multiskan_parser.py  multiskan_sky.py  multiskan_spectrum_parser.py  spectra_max_190.py  spectramax_parser.py  tekan_magellan.py  tekan_spark.py  tekan_spark_parser.py  test.enzymeml  test_sky.ipynb  utils.py
MTPHandler/schemes/: mtphandler_schema.md
MTPHandler/tools/: __init__.py  spectramax_reader.py
MTPHandler/units/: ontomaps.toml  predefined.py  units.py
Plate/core/: __init__.py  plate.py  well.py
Plate/schemes/: plate_schema.md
Plate/tools/: plate.py  platemanager.py  spectramax_reader.py
PlateHandler/core/: __init__.py  blank.py  plate.py  species.py  speciestype.py  well.py
PlateHandler/ioutils/: measurementmapper.py  standardmapper.py
PlateHandler/modified/: __init__.py  blank.py  initcondition.py  plate.py  species.py  speciestype.py  well.py
docs/: about.md  examples.md  getting_started.md  home.md  index.md  supported_plate_readers.md  usage.md
examples/: plate_visualization.json
images/: calibration_plot.json
mtphandler/: model.py  molecule.py  plate_manager.py  visualize.py
search/: search_index.json
specifications/: photometry.md  plate_reader.md
specigfications/: photometry.md
supported_plate_readers/: index.html
temp_handler/: mtp_logging.py
test_scheme/: enzymeml.md
tests/: test_multiscan.ipynb  test_parsers.py
usage/: index.html
(+47 files in other folders)
