[tool.poetry]
name = "mtphandler"
version = "0.2.11"
description = "Tool to work with microtiter plate data."
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "MTPHandler" }]
include = ["mtphandler/units/ontomaps.toml"]


[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
numpy = "^1.26.4"
plotly = "^5.18.0"
pandas = { version = ">=2.0,<2.2.2", extras = ["excel"] } # Due to Colab
pyenzyme = { git = "https://github.com/EnzymeML/PyEnzyme.git", branch = "v2-migration" }
calipytion = { git = "https://github.com/FAIRChemistry/CaliPytion.git"}
rich = "^13.7.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.7"
pytest = "^8.0.0"
devtools = "^0.12.2"
ipykernel = "^6.29.4"
mkdocstrings-python = "^1.11.1"
nbval = "^0.11.0"
mkdocs-jupyter = "^0.25.0"
mkdocs-plotly-plugin = "^0.1.3"
notebook = "<7"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true